@@ -14,8 +14,8 @@ information in the 'Translation' forum on Sourceforge.
 Dutch
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels@creatype.nl)
-	Is up-to-date?	   No
-	Last update:	   15 September 2002
+	Is up-to-date?	   Yes
+	Last update:	   09 Oktober 2002
 	Translated files:  7
 	---------------------------------------------------------
 
@@ -34,9 +34,9 @@ English
 French
 	---------------------------------------------------------
 	Maintained by:	   Vincent
-	Is up-to-date?	   No
-	Last update:	   31 August 2002
-	Translated files:  6
+	Is up-to-date?	   Yes
+	Last update:	   09 October 2002
+	Translated files:  7
 	---------------------------------------------------------
 
 
@@ -45,7 +45,7 @@ Hebrew
 	---------------------------------------------------------
 	Maintained by:	   Reuven Mansharoff (reuven@act.co.il)
 	Is up-to-date?	   No
-	Last update:	   31 August 2002
+	Last update:	   14 September
 	Translated files:  6
 	---------------------------------------------------------
 
@@ -64,7 +64,7 @@ Hungarian
 Italian
 	---------------------------------------------------------
 	Maintained by:	   Matteo Beccati (matteo@beccati.com)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   08 October 2002
 	Translated files:  7
 	---------------------------------------------------------
@@ -75,8 +75,8 @@ Polish
 	---------------------------------------------------------
 	Maintained by:	   Michael Paluchowski
 	Is up-to-date?	   No
-	Last update:	   10 September 2002
-	Translated files:  5
+	Last update:	   21 September 2002
+	Translated files:  7
 	---------------------------------------------------------
 
 
@@ -100,3 +100,10 @@ Russian
 
 
 
+Spanish
+	---------------------------------------------------------
+	Maintained by:	   SeBoRaiD (me2@seboraid.com.ar)
+	Is up-to-date?	   No
+	Last update:	   02 October 2002
+	Translated files:  7
+	---------------------------------------------------------
